# GrpcSandbox

./: .gitignore  Directory.Build.props  GrpcSandbox.sln  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
ConsoleApp/: ConsoleApp.csproj  Program.cs
Core/: Core.csproj  DefaultTokenValidationParameters.cs  Guard.cs  JwtTokenValidator.cs
Core.UnitTests/: Core.UnitTests.csproj  GuardTests.cs
Core/Protos/: customers.proto  dummy.proto
Core/Repositories/: ICustomerRepository.cs
JavaScript/: Generate-Bindings.ps1  index.js  package.json
Python/: Generate-Bindings.ps1  __main__.py
Server/: Program.cs  Server.csproj  appsettings.Development.json  appsettings.json
Server/Properties/: launchSettings.json
Server/Repositories/: CustomerRepository.cs
Server/Services/: CustomerService.cs  DummyService.cs
WorkerService/: Program.cs  Worker.cs  WorkerService.csproj  appsettings.Development.json
