[tool.poetry]
name = "grpcsandbox"
version = "0.1.0"
description = "A place to experience gRPC."
authors = ["data-miner00 <data-miner00@users.noreply.github.com>"]
license = "LGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.62.2"
grpcio-tools = "^1.62.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
